Made changes to HTML file and did styling with CSS. Need to work on JS next and possibly add more features like input field for length. Will need to work on responsiveness down the road

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Random Password Generator</title>
 
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,25 +22,36 @@
     <main class="overlap-box">
 
         <div>
-            <div>
-                <h1>Generate a</h1>
-                <p>random password</p>
-                <p>Never use an insecure password again.</p>
+            <div class="content-words">
+                <p id="first-line">Generate a</p>
+                <p id="second-line">random password</p>
+                <p id="third-line">Never use an insecure password again.</p>
             </div>
-            <div>
-                <button>Generate passwords</button>
+            <div class="btn-div">
+                <button class="btn">Generate passwords</button>
             </div>
         </div>
 
-        <div>
+        <div class="password-line">
+
+            <div class="middle-line">
+
+                <div class="decoration-line"></div>
+
+            </div>
+        </div>
+
+        <div class="see-passwords">
+
             <div class="password-1">
 
             </div>
+
             <div class="password-2">
-                
+
             </div>
-                    
         </div>
+
 
     </main>
 
