worked on js to make button output two random passwords. everything works as is currently but still not responsive.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
         <div class="see-passwords">
 
-            <div class="password-1">
+            <div class="password-1" id="password1">
 
             </div>
 
-            <div class="password-2">
+            <div class="password-2" id="password2">
 
             </div>
         </div>
