--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
                 <p id="second-line">random password</p>
                 <p id="third-line">Never use an insecure password again.</p>
             </div>
-            <div class="btn-div">
-                <button class="btn">Generate passwords</button>
+
+            <div class="actions">
+
+                <div class="btn-div">
+                    <button class="btn">Generate passwords</button>
+
+                </div>
+                <div class="input-field" >
+                    <input id="input-length" type="number" placeholder="Enter length of password here">
+
+                </div>
             </div>
         </div>
 
@@ -43,11 +52,11 @@
 
         <div class="see-passwords">
 
-            <div class="password-1" id="password1">
+            <div type="text" class="password-1" id="password1">
 
             </div>
 
-            <div class="password-2" id="password2">
+            <div type="text" class="password-2" id="password2">
 
             </div>
         </div>
