updated html and small changes to format

--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 
         <div class="see-passwords">
 
-            <div type="text" class="password-1" id="password1">
+            <div class="password-1" id="password1">
 
             </div>
+            
 
-            <div type="text" class="password-2" id="password2">
+            <div class="password-2" id="password2">
 
             </div>
         </div>
